feat: add proper error handling with docs for errors
